VFS-3955 fix for two-level-sidebar text alignment

--- a/app/styles/onedata-gui-common/components/two-level-sidebar.scss
+++ b/app/styles/onedata-gui-common/components/two-level-sidebar.scss
@@ -23,7 +23,7 @@
         top: 0.55em;
         font-size: $menu-icon-font-size;
       }
-      .after-icon {
+      > .one-icon + * {
         padding-left: 3.5em;
       }
       .status-toolbar {
